mentor spotlight button alignment fix

--- a/diversIT/src/app/landing-page/landing-page-components/mentor-spotlight/mentor-spotlight.component.scss
+++ b/diversIT/src/app/landing-page/landing-page-components/mentor-spotlight/mentor-spotlight.component.scss
@@ -11,6 +11,10 @@
     mat-card-actions {
         margin: 10px 10px 10px 10px!important;
         text-align: right;
+
+        .mat-raised-button {
+            margin-right: 0;
+        }
     }
 
     .mat-card-title {
